[gd_scene load_steps=13 format=3 uid="uid://bmujldy8dbxoc"]

[ext_resource type="Script" uid="uid://dil0sd15coaen" path="res://scripts/game/game.gd" id="1"]
[ext_resource type="Script" uid="uid://48ndg8ni6w7d" path="res://scripts/game/board.gd" id="2"]
[ext_resource type="Script" uid="uid://bntlqdtcvtvik" path="res://scripts/game/game_state.gd" id="3"]
[ext_resource type="Script" uid="uid://ckwpiudil1gi4" path="res://scripts/ui/captured_area.gd" id="4"]
[ext_resource type="Script" uid="uid://6clx3ttpd5j" path="res://scripts/ai/bot_player.gd" id="5"]
[ext_resource type="Script" uid="uid://be3n4rjwgoi8x" path="res://scripts/tactics/tactic_detector.gd" id="6"]
[ext_resource type="Script" uid="uid://ddwemnhg0700r" path="res://scripts/ui/cutin_manager.gd" id="7"]
[ext_resource type="Script" uid="uid://bkobs0echrd4i" path="res://scripts/ui/promotion_dialog.gd" id="8"]
[ext_resource type="Script" uid="uid://bxxcex3fkmfy4" path="res://scripts/ui/game_over_dialog.gd" id="9"]
[ext_resource type="AudioStream" uid="uid://modh2l3nnalh" path="res://assets/sounds/move.mp3" id="10"]
[ext_resource type="AudioStream" uid="uid://b61f1f6dmxlk3" path="res://assets/sounds/capture.mp3" id="11"]
[ext_resource type="AudioStream" uid="uid://do1o56hrtco5l" path="res://assets/sounds/check.mp3" id="12"]

[node name="Game" type="Node2D"]
script = ExtResource("1")

[node name="Board" type="Node2D" parent="."]
position = Vector2(60, 100)
script = ExtResource("2")

[node name="GameState" type="Node" parent="."]
script = ExtResource("3")

[node name="CapturedArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("4")

[node name="BotPlayer" type="Node" parent="."]
script = ExtResource("5")

[node name="ThinkTimer" type="Timer" parent="BotPlayer"]
one_shot = true

[node name="TacticDetector" type="Node" parent="."]
script = ExtResource("6")

[node name="UI" type="CanvasLayer" parent="."]

[node name="TurnLabel" type="Label" parent="UI"]
text = "Turn: White"

[node name="ResignButton" type="Button" parent="UI"]
text = "Resign"

[node name="CutInManager" type="CanvasLayer" parent="."]
script = ExtResource("7")

[node name="CutInContainer" type="Control" parent="CutInManager"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="CutInManager/CutInContainer"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.5)

[node name="CutInSprite" type="TextureRect" parent="CutInManager/CutInContainer"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
expand_mode = 1
stretch_mode = 6

[node name="CutInLabel" type="Label" parent="CutInManager/CutInContainer"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
text = "タクティック！"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CutInManager"]

[node name="SoundPlayer" type="AudioStreamPlayer" parent="CutInManager"]

[node name="PromotionDialog" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource("8")

[node name="ColorRect" type="ColorRect" parent="PromotionDialog"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="PromotionDialog"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Label" type="Label" parent="PromotionDialog/VBoxContainer"]
layout_mode = 2
text = "Promote Pawn To:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PromotionDialog/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="QueenButton" type="Button" parent="PromotionDialog/VBoxContainer/HBoxContainer"]
layout_mode = 2
expand_icon = true

[node name="RookButton" type="Button" parent="PromotionDialog/VBoxContainer/HBoxContainer"]
layout_mode = 2
expand_icon = true

[node name="BishopButton" type="Button" parent="PromotionDialog/VBoxContainer/HBoxContainer"]
layout_mode = 2
expand_icon = true

[node name="KnightButton" type="Button" parent="PromotionDialog/VBoxContainer/HBoxContainer"]
layout_mode = 2
expand_icon = true

[node name="GameOverDialog" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource("9")

[node name="ColorRect" type="ColorRect" parent="GameOverDialog"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverDialog"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="ResultLabel" type="Label" parent="GameOverDialog/VBoxContainer"]
layout_mode = 2
text = "White Wins!"
horizontal_alignment = 1

[node name="PlayAgainButton" type="Button" parent="GameOverDialog/VBoxContainer"]
layout_mode = 2
text = "Play Again"

[node name="MainMenuButton" type="Button" parent="GameOverDialog/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="ResignConfirmDialog" type="ConfirmationDialog" parent="."]
dialog_text = "Are you sure you want to resign?"

[node name="Sounds" type="Node" parent="."]

[node name="Move" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("10")

[node name="Capture" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("11")

[node name="Check" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("12")

[node name="GameStart" type="AudioStreamPlayer" parent="Sounds"]

[node name="Victory" type="AudioStreamPlayer" parent="Sounds"]

[node name="Defeat" type="AudioStreamPlayer" parent="Sounds"]

[node name="Tactic" type="AudioStreamPlayer" parent="Sounds"]

[connection signal="pressed" from="UI/ResignButton" to="." method="_on_resign_button_pressed"]
[connection signal="confirmed" from="ResignConfirmDialog" to="." method="_on_resign_confirmed"]
